--- a/jctools-core/pom.xml
+++ b/jctools-core/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.jctools</groupId>
+		<groupId>io.github.jponge.jct</groupId>
 		<artifactId>jctools-parent</artifactId>
 		<version>4.0.2-SNAPSHOT</version>
 	</parent>
