--- a/jctools-concurrency-test/pom.xml
+++ b/jctools-concurrency-test/pom.xml
@@ -17,12 +17,12 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jctools</groupId>
+            <groupId>io.github.jponge.jct</groupId>
             <artifactId>jctools-core</artifactId>
             <version>${project.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.jctools</groupId>
+            <groupId>io.github.jponge.jct</groupId>
             <artifactId>jctools-experimental</artifactId>
             <version>${project.version}</version>
         </dependency>
