--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>io.github.jponge.jct</groupId>
     <artifactId>jctools-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.0.2-SNAPSHOT</version>
+    <version>4.0.2-RC1</version>
     <name>JCTools Parent</name>
     <organization>
         <url>https://github.com/JCTools</url>
