--- a/jctools-channels/pom.xml
+++ b/jctools-channels/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.github.jponge.jct</groupId>
         <artifactId>jctools-parent</artifactId>
-        <version>4.0.2-RC1</version>
+        <version>4.0.2-SNAPSHOT</version>
     </parent>
 
     <artifactId>jctools-channels</artifactId>
