--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>io.github.jponge.jct</groupId>
     <artifactId>jctools-parent</artifactId>
     <packaging>pom</packaging>
-    <version>4.0.2-RC2</version>
+    <version>4.0.2-SNAPSHOT</version>
     <name>JCTools Parent</name>
     <description>A friendly fork of JCTools</description>
     <url>>https://github.com/jponge/jct</url>
